# reverse

./: .gitignore  Cargo.toml  README.md
reverse/: Cargo.toml
reverse-terminal/: Cargo.toml
reverse-terminal/src/: lib.rs  management.rs  terminal.rs
reverse-ui/: package.json
reverse-ui/src/: App.css  App.tsx  Terminal.tsx
reverse/src/: main.rs
