[package]
name = "reverse-terminal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.5.17", features = ["ws", "headers"] }
portable-pty = { version = "0.7.0", features = ["ssh", "ssh2"] }
serde_json = "1.0.0"
futures = "0.3.0"
tracing = "0.1.37"
reverse-storage = { path = "../reverse-storage" }
anyhow = "1.0.66"