[package]
name = "reverse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
axum = { version = "0.5.17", features = ["ws", "headers"] }
tracing-subscriber = { version = "0.3.16", features = ["registry"] }
tracing = "0.1.37"
reverse-terminal = { path = "../reverse-terminal" }